force-app/main/default/objects/WOD_Daily_Workout__c/WOD_Daily_Workout__c.object-meta.xml
<CustomObject>
    <description>Daily Workouts will be stored here and reference the WOD_Movements object</description>
    <label>Daily Workout</label>
    <nameField>
        <displayFormat>WOD-{000000}</displayFormat>
        <label>AutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Workouts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>