force-app/main/default/objects/WOD_Daily_Workout__c/fields/Date_Performed__c.field-meta.xml
<CustomField>
    <fullName>Date_Performed__c</fullName>
    <defaultValue>Today()</defaultValue>
    <description>If left blank on save then the date will be updated with the created date</description>
    <label>Date Performed</label>
    <type>Date</type>
</CustomField>