force-app/main/default/objects/WOD_Daily_Workout__c/fields/Score_as_Time__c.field-meta.xml
<CustomField>
    <fullName>Score_as_Time__c</fullName>
    <description>for Workouts when your Time is your score</description>
    <inlineHelpText>ex: 15:35</inlineHelpText>
    <label>Score as Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>