force-app/main/default/objects/WOD_Daily_Workout__c/fields/Score_as_Total_Reps__c.field-meta.xml
<CustomField>
    <fullName>Score_as_Total_Reps__c</fullName>
    <label>Score as Total Reps</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>