force-app/main/default/objects/WOD_Daily_Workout__c/fields/Time_Duration__c.field-meta.xml
<CustomField>
    <fullName>Time_Duration__c</fullName>
    <description>for EMOTM &amp; AMRAP</description>
    <inlineHelpText>ex: 15:00</inlineHelpText>
    <label>Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>