force-app/main/default/objects/WOD_Daily_Workout__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <label>Sum of Total Weight</label>
    <summarizedField>WOD_Workout_Movements__c.Total_Weight__c</summarizedField>
    <summaryForeignKey>WOD_Workout_Movements__c.Daily_Workout__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>