force-app/main/default/objects/WOD_Daily_Workout__c/fields/Workout_Description__c.field-meta.xml
<CustomField>
    <fullName>Workout_Description__c</fullName>
    <description>Rep Scheme and more details</description>
    <label>Workout Description</label>
    <type>TextArea</type>
</CustomField>