force-app/main/default/objects/WOD_Daily_Workout__c/recordTypes/AMRAP.recordType-meta.xml
<RecordType>
    <fullName>AMRAP</fullName>
    <active>true</active>
    <description>As Many Rounds/Reps as Possible</description>
    <label>AMRAP</label>
</RecordType>