force-app/main/default/objects/WOD_Daily_Workout__c/recordTypes/Death_By.recordType-meta.xml
<RecordType>
    <fullName>Death_By</fullName>
    <active>true</active>
    <description>Increase a Rep Each Minute Until Failure to Complete in Min</description>
    <label>Death By</label>
</RecordType>