force-app/main/default/objects/WOD_Daily_Workout__c/recordTypes/EMOTM.recordType-meta.xml
<RecordType>
    <fullName>EMOTM</fullName>
    <active>true</active>
    <description>Every ___ Min(s) on the Minute</description>
    <label>EMOTM</label>
</RecordType>