force-app/main/default/objects/WOD_Daily_Workout__c/recordTypes/For_Time.recordType-meta.xml
<RecordType>
    <fullName>For_Time</fullName>
    <active>true</active>
    <description>Complete the Amount of Work and Record Time</description>
    <label>For Time</label>
</RecordType>