force-app/main/default/objects/WOD_Daily_Workout__c/recordTypes/Strength.recordType-meta.xml
<RecordType>
    <fullName>Strength</fullName>
    <active>true</active>
    <description>Focus is on Perform Movement Not Time</description>
    <label>Strength</label>
</RecordType>