force-app/main/default/objects/WOD_Daily_Workout__c/validationRules/Entered_as_Time.validationRule-meta.xml
<ValidationRule>
    <fullName>Entered_as_Time</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
 AND(
  NOT(
   ISBLANK(Time_Duration__c)
  ),
  NOT(
   REGEX(Time_Duration__c, &quot;[0-9]{1,3}:[0-5][0-9]&quot;)
  )
 ),
 AND(
  NOT(
   ISBLANK(Score_as_Time__c)
  ),
  NOT(
   REGEX(Score_as_Time__c, &quot;[0-9]{1,3}:[0-5][0-9]&quot;)
  )
 )
)</errorConditionFormula>
    <errorMessage>Not entered as Time</errorMessage>
</ValidationRule>