force-app/main/default/objects/WOD_Daily_Workout__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_Performed__c</columns>
    <columns>Time_Duration__c</columns>
    <columns>Score_as_Time__c</columns>
    <columns>Score_as_Total_Reps__c</columns>
    <columns>Total_Reps__c</columns>
    <columns>Total_Weight__c</columns>
    <columns>Workout_Description__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>