force-app/main/default/objects/WOD_Daily_Workout__c/listViews/EMOTM_Workouts.listView-meta.xml
<ListView>
    <fullName>EMOTM_Workouts</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Date_Performed__c</columns>
    <columns>Time_Duration__c</columns>
    <columns>Score_as_Time__c</columns>
    <columns>Score_as_Total_Reps__c</columns>
    <columns>Workout_Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>WOD_Daily_Workout__c.EMOTM</value>
    </filters>
    <label>EMOTM Workouts</label>
</ListView>